# ZPI2024_IO_CodeBlack

./: Main.java  README.md  Readme.md  main.py  pyproject.toml
.github/workflows/: CI.yml
src/: CurrencyManager.py  main.py
test/: CurrencyManagerTest.py  fetch_data_test.py  test_currency_manager.py  test_main.py
tests/: show_currencies_test.py
